<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AIHelp Demo</string>

    <string name="btn_change_lang">模拟游戏内切换语言</string>
    <string name="btn_elva_chat_show">机器人界面(显示联系客服)</string>
    <string name="btn_elva_chat_hide">机器人界面(不显示联系客服)</string>
    <string name="btn_op_list_show">运营界面(显示联系客服)</string>
    <string name="btn_op_list_hide">运营界面(不显示联系客服)</string>
    <string name="btn_conversation">人工界面</string>

    <string name="btn_faq1">FAQ列表界面(显示联系客服,进机器人)</string>
    <string name="btn_faq2">FAQ列表界面(显示联系客服,进人工)</string>
    <string name="btn_faq3">FAQ列表界面(不显示联系客服)</string>

    <string name="btn_simple_faq1">单条faq界面(显示联系客服)</string>
    <string name="btn_simple_faq2">单条faq界面(不显示联系客服)</string>

    <string name="btn_show_url">Show URL</string>
</resources>
